--- a/platforms/android/assets/www/video.html
+++ b/platforms/android/assets/www/video.html
@@ -26,7 +26,7 @@
                 if (deviceType === "Android"){
                     var video = document.getElementById('prep');
                     video.addEventListener('click',function(){
-                        cordova.plugins.videoPlayer.play("file:///android_asset/www/video/BigBuck.m4v"); 
+                        cordova.plugins.videoPlayer.play("file:///android_asset/www/video/m4v/prep.m4v"); 
                     },false);
                 } else {
                     enableVideoClicks();
@@ -89,7 +89,7 @@
 </nav>
        <h1> Video </h1>
        <video id="prep" autobuffer width="360" height="240">
-            <source src="video/BigBuck.m4v">
+            <source src="video/m4v/prep.m4v">
         </video>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
           <div class="container">
